driverRunner command命令拼接   schedule的公平调度逻辑